<resources>
    <string name="app_name">WhatzBoost</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_message_was_deleted">This message was deleted</string>
    <string name="dummy_time">4:32 MP</string>
    <string name="file_name_">File883843847671563.mp3</string>
    <string name="doc_time">12:34 MP</string>
    <string name="open_">OPEN</string>
    <string name="facebook_app_id">1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="AD_App_ID">ca-app-pub-3940256099942544~3347511713</string>
    <string name="AD_Interstitial">ca-app-pub-3940256099942544/1033173712</string>
    <string name="AD_Rewarded">ca-app-pub-3940256099942544/5224354917</string>
    <string name="VideoSplitter">VideoSplitter</string>
    <string name="media_msg_deleted">Media message deleted</string>
    <string name="recovered_deleted">I recovered a deleted media!</string>
    <string name="reply">REPLY</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="split_msg"><b>Have longer video and unable to upload the whole video to WA status?</b><br /> <br /> No Issues!!!!! Use our <b>video splitter</b> to split and upload the whole video in one go.</string>
    <string name="enable_notifications">Enable notification permissions to receive real-time push notifications, including important updates, and even access to view deleted messages.</string>
    <string name="enable_media">Grant access to your file and media permissions to effortlessly save QR codes, save &amp; view images and videos.</string>
    <string name="enable_stories">Unlock WA stories with ease! Enable the Stories folder to enjoy captivating moments shared by your contacts.</string>
</resources>